[package]
name = "sumo-networks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "streetlamps-subscriber"

[dependencies]
anyhow = "1.0.75"
# axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
# serde_json = "1.0.108"
# toml = "0.8.8"
# tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
# tokio-rusqlite = "0.5.0"
zmq = "0.10.0"
ciborium = "0.2.1"
log = "0.4.20"
serde_cbor = "0.11.2"
env_logger = "0.10.1"
chrono = "0.4.31"
