[tool.poetry]
name = "sumo-networks"
version = "0.1.0"
description = ""
authors = ["kpbaks <kristoffer.pbs@tuta.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
traci = "^1.18.0"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
